--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -510,7 +510,7 @@ const data = [
 ];
 
      
-        // Event categories and their multipliers
+       // Event categories and their multipliers
 const eventCategories = {
     "Cooking/Eating": ["Pan Draw", "Cutlery Cupboard", "Fridge"],
     "Kitchen Light": ["Kitchen Light"],
@@ -523,12 +523,21 @@ const categoryMultipliers = {
     "Hobbies/Recreation/Socialising": 25
 };
 
+// Function to correctly parse the date and time
+function parseTimestamp(dateStr, timeStr) {
+    const [day, month, year] = dateStr.split('-');
+    const [hours, minutes, seconds] = timeStr.split(':');
+    const date = new Date(year, month - 1, day, hours, minutes, seconds); // month is 0-based in JavaScript Date
+    return date;
+}
+
 // Parse the data into a structured format
 const parsedData = data.map(item => {
     const parts = item.split(", ");
-    const timestamp = parts[0] + " " + parts[1]; // Combine Date and Time
-    const event = parts[2];
-    const date = new Date(timestamp);
+    const timestamp = parts[0]; // Date
+    const time = parts[1]; // Time
+    const event = parts[2]; // Activity
+    const date = parseTimestamp(timestamp, time);
 
     return {
         timestamp: date,
