--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -91,35 +91,28 @@ to detect movement</p>
     
      <script src="https://d3js.org/d3.v7.min.js"></script>
 
-    <style>
+   
+<style>
         body {
             font-family: Arial, sans-serif;
+            padding: 20px;
         }
-        #chart {
-            margin-bottom: 20px;
-        }
-        #nav {
-            display: flex;
-            justify-content: space-between;
-            margin: 20px;
-        }
-        .arrow {
-            cursor: pointer;
-            font-size: 24px;
+        .tooltip {
+            position: absolute;
+            text-align: center;
+            padding: 5px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            border-radius: 5px;
+            pointer-events: none;
+            opacity: 0;
         }
     </style>
 </head>
 <body>
-    <div id="nav">
-        <span class="arrow" id="prev-day">&#8592; Previous Day</span>
-        <span id="current-day">Day: </span>
-        <span class="arrow" id="next-day">Next Day &#8594;</span>
-    </div>
-
-    <div id="chart"></div>
-
-    <!-- Tooltip element -->
-    <div class="tooltip" id="tooltip"></div>
+    <h2>Activity Heatmap</h2>
+    <svg id="heatmap"></svg> <!-- Heatmap will be rendered here -->
+    <div class="tooltip"></div>
 
     <script>
 
