--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -101,7 +101,7 @@
     <img src="../media/heatmap.webp" alt="Heatmap" class="iot-long-image">
     
     <!-- Caption below the image -->
-    <p class="iot-image-caption">Each sensor was grouped into one of three categories: cooking; chores; hobbies. A heatmap format was used to visualise the data, showing particpants a quick way of understanding when they were most engaged in each of the three categories, as detected by the IoT system.</p>
+    <p class="iot-long-image-caption">Each sensor was grouped into one of three categories: cooking; chores; hobbies. A heatmap format was used to visualise the data, showing particpants a quick way of understanding when they were most engaged in each of the three categories, as detected by the IoT system.</p>
 </div>
 
   
