--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -104,7 +104,7 @@
     <p class="iot-long-image-caption">Each sensor was grouped into one of three categories: cooking; chores; hobbies. A heatmap format was used to visualise the data, showing particpants a quick way of understanding when they were most engaged in each of the three categories, as detected by the IoT system.</p>
 </div>
 
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 
 </body>
 </html>
