--- a/koth/index.html
+++ b/koth/index.html
@@ -77,10 +77,10 @@
 <div class="gif-and-image-row-wrapper">
   <!-- GIF Section -->
   <div class="gif-container">
-    <img src="../media/king.webp" alt="GIF 1" loop>
-    <img src="../media/knight.webp" alt="GIF 2" loop>
-    <img src="../media/wizard.webp" alt="GIF 3" loop>
-    <img src="../media/dragon.webp" alt="GIF 4" loop>
+    <img src="../media/king.gif" alt="GIF 1" loop>
+    <img src="../media/knight.gif" alt="GIF 2" loop>
+    <img src="../media/wizard.gif" alt="GIF 3" loop>
+    <img src="../media/dragon.gif" alt="GIF 4" loop>
   </div>
 </div>
 
