--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -16,14 +16,14 @@
     <!-- First Long Image -->
     <div class="tension-image-container">
       <h2 class="tension-image-title">First Long Image</h2>
-      <img src="tensiontitle.png" alt="First Long Image" class="tension-long-image">
+      <img src="tensiontitle.webp" alt="First Long Image" class="tension-long-image">
       <p class="tension-image-caption">This is the caption for the first long image. It provides context and information about the image above.</p>
     </div>
 
     <!-- Second Long Image -->
     <div class="tension-image-container">
       <h2 class="tension-image-title">Second Long Image</h2>
-      <img src="tensiondrafts.png" alt="Second Long Image" class="tension-long-image">
+      <img src="tensiondrafts.webp" alt="Second Long Image" class="tension-long-image">
       <p class="tension-image-caption">This is the caption for the second long image. It complements the narrative of the first image.</p>
     </div>
 
