--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 <div class="container">
   <!-- First Row -->
   <div class="first-row">
+    <a href="/tension-stool" class="column-link">
       <img src="media/StoolBanner.webp" alt="Banner Image" class="banner">
+    </a>
     <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
@@ -80,13 +82,17 @@
   <div class="divider"></div>
      <!-- Fifth Row -->
   <div class="fifth-row">
+    <a href="/gingerbread" class="column-link">
       <img src="media/gingerbread.webp" alt="Fifth Banner Image" class="banner">
+    </a>
   </div>
   <!-- Divider -->
   <div class="divider"></div>
    <!-- Sixth Row -->
   <div class="sixth-row">
+    <a href="/civil-design" class="column-link">
       <img src="media/civildesign.webp" alt="Sixth Banner Image" class="banner">
+    </a>
     <img src="logos/durham.webp" alt="Sixth Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
