--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -70,4 +70,5 @@
   <!-- Add the script for the model-viewer library -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </body>
+    <script src="main.js"></script>
 </html>
