--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -48,22 +48,25 @@
     <!-- First Long Image -->
     <div class="tension-image-container">
       <img src="../media/tensiontitle.webp" alt="First Long Image" class="tension-long-image">
-      <p class="tension-image-caption">This is the caption for the first long image. It provides context and information about the image above.</p>
+      <p class="tension-image-caption">A bamboo stool made solely from combs and strips</p>
     </div>
 
     <!-- Second Long Image -->
     <div class="tension-image-container">
       <img src="../media/tensiondrafts.webp" alt="Second Long Image" class="tension-long-image">
-      <p class="tension-image-caption">This is the caption for the second long image. It complements the narrative of the first image.</p>
+      <p class="tension-image-caption">By employing fundamental structural laws under the prentense of a design challenge - to make a functional stool from any one tool and single material (and nothing else) - a suprisingly strong stool can be made. The simplified iterative process is visualised above.</p>
     </div>
 
     <!-- Interactive 3D Model -->
     <div class="tension-model-container">
-      <h2 class="tension-model-title">Interactive 3D Model</h2>
+      <h2 class="tension-model-title">The Design:</h2>
       <!-- Placeholder for the 3D model -->
       <model-viewer src="../media/model.glb" alt="Interactive 3D Model" auto-rotate camera-controls ar>
       </model-viewer>
-      <p class="tension-model-caption">Explore this interactive 3D model by rotating and zooming it.</p>
+      <p class="tension-model-caption">An interactive 3D model of the stool</p>
+         <!-- Image next to/below the model -->
+  <img src="../media/tensiontruss.png" alt="Description of image" class="model-image">
+</div>
     </div>
   </div>
 
@@ -71,4 +74,5 @@
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </body>
     <script src="../main.js"></script>
+
 </html>
