--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -65,7 +65,7 @@
       </model-viewer>
       <p class="tension-model-caption">An interactive 3D model of the stool</p>
          <!-- Image next to/below the model -->
-  <img src="../media/tensiontruss.png" alt="Description of image" class="model-image">
+  <img src="../media/tensiontruss.webp" alt="Description of image" class="model-image">
 </div>
     </div>
   </div>
