--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -63,7 +63,7 @@
       <!-- Placeholder for the 3D model -->
       <model-viewer src="../media/model.glb" alt="Interactive 3D Model" auto-rotate camera-controls ar>
       </model-viewer>
-      <p class="tension-model-caption">An interactive 3D model of the stool</p>
+      <p class="tension-model-caption">An interactive 3D model of the stool ↑ </p>
          <!-- Image next to/below the model -->
   <img src="../media/tensiontruss.webp" alt="Description of image" class="model-image">
 </div>
