--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -57,18 +57,26 @@
       <p class="tension-image-caption">By employing fundamental structural laws under the prentense of a design challenge - to make a functional stool from any one tool and single material (and nothing else) - a suprisingly strong stool can be made. The simplified iterative process is visualised above.</p>
     </div>
 
-  <!-- Interactive 3D Model -->
-    <div class="tension-model-container">
-      <h2 class="tension-model-title">The Design:</h2>
-      <!-- Placeholder for the 3D model -->
+  <!-- Interactive 3D Model Section -->
+<div class="tension-model-container">
+  <!-- Title above both elements -->
+  <h2 class="tension-model-title">The Design:</h2>
+  
+  <!-- Model and Image Wrapper -->
+  <div class="model-wrapper">
+    <!-- 3D Model -->
+    <div class="model-item">
       <model-viewer src="../media/model.glb" alt="Interactive 3D Model" auto-rotate camera-controls ar>
       </model-viewer>
-      <p class="tension-model-caption">An interactive 3D model of the stool ↑ </p>
-         <!-- Image next to/below the model -->
-  <img src="../media/tensiontruss.webp" alt="Description of image" class="model-image">
-</div>
+      <!-- Caption for 3D Model (wide displays only) -->
+      <p class="tension-model-caption">An interactive 3D model of the stool ↑</p>
     </div>
+
+    <!-- Image next to the 3D Model -->
+    <img src="../media/tensiontruss.webp" alt="Tension truss design image" class="model-image">
   </div>
+</div>
+
 
 
   <!-- Add the script for the model-viewer library -->
