--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -76,6 +76,11 @@
     <!-- Image next to the 3D Model -->
     <img src="../media/tensiontruss.webp" alt="Tension truss design image" class="model-image">
   </div>
+
+   <!-- Additional Image -->
+  <img src="../media/portraitstool.webp" alt="Additional descriptive image" class="portrait-stool-image">
+</div>
+    
 </div>
 
 
