--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -43,41 +43,46 @@
   </div>
 
   <!-- Page Content -->
-  <div class="tension-content-container">
-    <!-- First Long Image -->
-    <div class="tension-image-container">
-      <img src="../media/tensiontitle.webp" alt="First Long Image" class="tension-long-image">
-      <p class="tension-image-caption">A bamboo stool made solely from combs and strips</p>
-    </div>
+  <div class="page-container">
+    <!-- Main Content Section -->
+    <div class="main-content">
+      <!-- First Long Image -->
+      <div class="tension-image-container">
+        <img src="../media/tensiontitle.webp" alt="First Long Image" class="tension-long-image">
+        <p class="tension-image-caption">A bamboo stool made solely from combs and strips</p>
+      </div>
 
-    <!-- Second Long Image -->
-    <div class="tension-image-container">
-      <img src="../media/tensiondrafts.webp" alt="Second Long Image" class="tension-long-image">
-      <p class="tension-image-caption">By employing fundamental structural laws under the prentense of a design challenge - to make a functional stool from any one tool and single material (and nothing else) - a suprisingly strong stool can be made. The simplified iterative process is visualised above.</p>
-    </div>
+      <!-- Second Long Image -->
+      <div class="tension-image-container">
+        <img src="../media/tensiondrafts.webp" alt="Second Long Image" class="tension-long-image">
+        <p class="tension-image-caption">By employing fundamental structural laws under the prentense of a design challenge - to make a functional stool from any one tool and single material (and nothing else) - a suprisingly strong stool can be made. The simplified iterative process is visualised above.</p>
+      </div>
 
-    <!-- Interactive 3D Model Section -->
-    <div class="tension-model-container">
-      <!-- Title above both elements -->
-      <h2 class="tension-model-title">The Design:</h2>
+      <!-- Interactive 3D Model Section -->
+      <div class="tension-model-container">
+        <!-- Title above both elements -->
+        <h2 class="tension-model-title">The Design:</h2>
 
-      <!-- Model and Image Wrapper -->
-      <div class="model-wrapper">
-        <!-- 3D Model -->
-        <div class="model-item">
-          <model-viewer src="../media/model.glb" alt="Interactive 3D Model" auto-rotate camera-controls ar>
-          </model-viewer>
-          <!-- Caption for 3D Model (wide displays only) -->
-          <p class="tension-model-caption">An interactive 3D model of the stool ↑</p>
+        <!-- Model and Image Wrapper -->
+        <div class="model-wrapper">
+          <!-- 3D Model -->
+          <div class="model-item">
+            <model-viewer src="../media/model.glb" alt="Interactive 3D Model" auto-rotate camera-controls ar>
+            </model-viewer>
+            <!-- Caption for 3D Model (wide displays only) -->
+            <p class="tension-model-caption">An interactive 3D model of the stool ↑</p>
+          </div>
+
+          <!-- Image next to the 3D Model -->
+          <img src="../media/tensiontruss.webp" alt="Tension truss design image" class="model-image">
         </div>
-
-        <!-- Image next to the 3D Model -->
-        <img src="../media/tensiontruss.webp" alt="Tension truss design image" class="model-image">
       </div>
     </div>
 
-    <!-- Additional Image -->
-    <img src="../media/portraitstool.webp" alt="Additional descriptive image" class="portrait-stool-image">
+    <!-- Side Image Section -->
+    <div class="side-image-container">
+      <img src="../media/portraitstool.webp" alt="Additional descriptive image" class="portrait-stool-image">
+    </div>
   </div>
 
   <!-- Add the script for the model-viewer library -->
