--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <!-- Page Content -->
-  <div class="page-container">
+  <div class="tension-page-container">
     <!-- Main Content Section -->
     <div class="main-content">
       <!-- First Long Image -->
