--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -55,7 +55,7 @@
       <!-- Second Long Image -->
       <div class="tension-image-container">
         <img src="../media/tensiondrafts.webp" alt="Second Long Image" class="tension-long-image">
-        <p class="tension-image-caption">By employing fundamental structural laws under the prentense of a design challenge - to make a functional stool from any one tool and single material (and nothing else) - a suprisingly strong stool can be made. The simplified iterative process is visualised above.</p>
+        <p class="tension-image-caption"> A Royal College of Art Design Challenge: to make a functional stool from any one tool and single material (and nothing else)... By employing fundamental structural laws, a suprisingly strong stool can be made using 150 bamboo strips and 15 bamboo combs. The simplified iterative process is visualised above.</p>
       </div>
 
       <!-- Interactive 3D Model Section -->
