--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -18,42 +18,40 @@
     </div>
   </div>
   
-  <!-- Lightbox 1 -->
-  <div class="camden-lightbox" id="camden-lightbox-1">
+   <!-- Lightboxes -->
+  <div id="lightbox1" class="camden-lightbox">
     <div class="camden-lightbox-content">
-      <img src="../media/lightbox1-image.webp" alt="Lightbox 1 Image">
-      <div class="camden-text-content">
+      <img src="../media/image1.webp" alt="Lightbox Image 1" class="camden-lightbox-image">
+      <div class="camden-lightbox-text">
         <h2>Title 1</h2>
-        <p>This is the body text for Title 1. Here you can describe more details about this part of the image and its significance.</p>
+        <p>This is the description for Title 1.</p>
       </div>
-      <button class="camden-close-btn" data-close>×</button>
     </div>
+    <button class="camden-lightbox-close">&times;</button>
   </div>
 
-  <!-- Lightbox 2 -->
-  <div class="camden-lightbox" id="camden-lightbox-2">
+  <div id="lightbox2" class="camden-lightbox">
     <div class="camden-lightbox-content">
-      <img src="../media/lightbox2-image.webp" alt="Lightbox 2 Image">
-      <div class="camden-text-content">
+      <img src="../media/image2.webp" alt="Lightbox Image 2" class="camden-lightbox-image">
+      <div class="camden-lightbox-text">
         <h2>Title 2</h2>
-        <p>This is the body text for Title 2. You can include more details about this part of the image.</p>
+        <p>This is the description for Title 2.</p>
       </div>
-      <button class="camden-close-btn" data-close>×</button>
     </div>
+    <button class="camden-lightbox-close">&times;</button>
   </div>
 
-  <!-- Lightbox 3 -->
-  <div class="camden-lightbox" id="camden-lightbox-3">
+  <div id="lightbox3" class="camden-lightbox">
     <div class="camden-lightbox-content">
-      <img src="../media/lightbox3-image.webp" alt="Lightbox 3 Image">
-      <div class="camden-text-content">
+      <img src="../media/image3.webp" alt="Lightbox Image 3" class="camden-lightbox-image">
+      <div class="camden-lightbox-text">
         <h2>Title 3</h2>
-        <p>This is the body text for Title 3. Highlight any interesting details here.</p>
+        <p>This is the description for Title 3.</p>
       </div>
-      <button class="camden-close-btn" data-close>×</button>
     </div>
+    <button class="camden-lightbox-close">&times;</button>
   </div>
 
-  <script src="../main.js"></script>
+  <script src="camden-lightbox.js"></script>
 </body>
 </html>
