--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -10,15 +10,23 @@
 <body>
 <!-- Full-Width Static Background Image -->
   <div class="camden-background-image-container" style="background: url('../media/camdenmap.webp') no-repeat center center fixed; background-size: cover; height: 100vh; position: relative;">
-    <!-- Titles overlay -->
+     <!-- Titles overlay -->
     <div class="camden-overlay">
-      <a href="#" class="camden-title" data-lightbox="lightbox1" style="top: 20%; left: 15%;">Title 1</a>
+      <!-- Title 1 mapped to (650px, 250px) -->
+      <a href="#" 
+         class="camden-title" 
+         data-lightbox="lightbox1" 
+         style="position: absolute; top: calc(250px / 1080 * 100%); left: calc(650px / 1920 * 100%);">
+        Title 1
+      </a>
+
+      <!-- Example additional titles -->
       <a href="#" class="camden-title" data-lightbox="lightbox2" style="top: 50%; left: 50%;">Title 2</a>
       <a href="#" class="camden-title" data-lightbox="lightbox3" style="top: 80%; left: 30%;">Title 3</a>
     </div>
   </div>
-  
-   <!-- Lightboxes -->
+
+  <!-- Lightboxes -->
   <div id="lightbox1" class="camden-lightbox">
     <div class="camden-lightbox-content">
       <img src="../media/image1.webp" alt="Lightbox Image 1" class="camden-lightbox-image">
