--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -7,13 +7,13 @@
   <style>
     /* CSS styles.css */
     .camden-background-image-container {
-      background: url('../media/camdenmap.webp') no-repeat center center;
-      background-size: contain; 
+      background: url('../media/camdenmap.webp') no-repeat center top;
+      background-size: 100% auto; 
       background-attachment: scroll; 
       min-height: 100vh; 
       position: relative;
       overflow-y: auto; 
-      width: 100%; /* Ensure the container takes full width */
+      width: 100%;
     }
 
     .camden-overlay {
