--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -3,104 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Overlay with Lightbox</title>
-  <style>
-    /* CSS styles.css */
-    .camden-background-image-container {
-      background: url('../media/camdenmap.webp') no-repeat center top;
-      background-size: auto 100%; 
-      background-attachment: scroll; 
-      min-height: 100vh; 
-      position: relative;
-      overflow-x: auto; 
-      width: auto;
-    }
-
-    .camden-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-    .camden-title {
-      position: fixed; /* Fixed positioning for titles */
-    }
-
-    /* Example: Title 1 mapped to (650px, 250px) */
-    #title1 {
-      top: 250px;
-      left: 650px;
-    }
-
-    /* Example: Title 2 mapped to (960px, 540px) */
-    #title2 {
-      top: 540px;
-      left: 960px;
-    }
-
-    /* Example: Title 3 mapped to (576px, 864px) */
-    #title3 {
-      top: 864px;
-      left: 576px;
-    }
-
-    /* Lightbox Styles (You can customize these) */
-    .camden-lightbox {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      z-index: 1000;
-    }
-
-    .camden-lightbox-content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      max-width: 80%;
-      max-height: 80%;
-      background-color: #fff;
-    }
-
-    .camden-lightbox-image {
-      max-width: 100%;
-      max-height: 100%;
-    }
-
-    .camden-lightbox-text {
-      padding: 20px;
-    }
-
-    .camden-lightbox-close {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 20px;
-      cursor: pointer;
-    }
-  </style>
+  <title>Interactive Map with Titles</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 
-  <div class="camden-background-image-container">
-    <div class="camden-overlay">
-      <a href="#" id="title1" class="camden-title" data-lightbox="lightbox1">
-        Title 1
-      </a>
-      <a href="#" id="title2" class="camden-title" data-lightbox="lightbox2">
-        Title 2
-      </a>
-      <a href="#" id="title3" class="camden-title" data-lightbox="lightbox3">
-        Title 3
-      </a>
-    </div>
-  </div>
+  <div id="map"></div> 
 
   <div id="lightbox1" class="camden-lightbox">
     <div class="camden-lightbox-content">
@@ -135,27 +44,7 @@
     <button class="camden-lightbox-close">&times;</button>
   </div>
 
-  <script>
-    // JavaScript (camden-lightbox.js)
-    const lightboxes = document.querySelectorAll('.camden-lightbox');
-    const triggers = document.querySelectorAll('.camden-title');
-    const closeButtons = document.querySelectorAll('.camden-lightbox-close');
-
-    triggers.forEach(trigger => {
-      trigger.addEventListener('click', (event) => {
-        event.preventDefault();
-        const lightboxId = trigger.dataset.lightbox;
-        const lightbox = document.getElementById(lightboxId);
-        lightbox.style.display = 'block';
-      });
-    });
-
-    closeButtons.forEach(button => {
-      button.addEventListener('click', () => {
-        const lightbox = button.closest('.camden-lightbox');
-        lightbox.style.display = 'none';
-      });
-    });
-  </script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
