--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -5,7 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Map with Titles</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="../styles.css">
+  <style>
+    /* CSS styles.css */
+    #map { 
+      height: 100vh; 
+      transform: rotate(90deg); /* Rotate the map 90 degrees */
+    }
+
+    .leaflet-control-attribution { 
+      display: none; /* Hide the attribution */
+    }
+
+    .camden-title {
+      position: absolute; 
+      /* Add any styling for your titles here */
+    }
+
+    /* Lightbox Styles (You can customize these) */
+    .camden-lightbox {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      z-index: 1000;
+    }
+
+    .camden-lightbox-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 80%;
+      max-height: 80%;
+      background-color: #fff;
+    }
+
+    .camden-lightbox-image {
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    .camden-lightbox-text {
+      padding: 20px;
+    }
+
+    .camden-lightbox-close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 20px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
@@ -45,6 +99,47 @@
   </div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="../script.js"></script>
+  <script>
+    // JavaScript (script.js)
+    const map = L.map('map', {
+      attributionControl: false // Disable attribution control
+    }).setView([51.5415, -0.1424], 16); // Centered on Camden Lock
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+    // Add titles (replace with your actual coordinates and content)
+    const title1 = L.marker([51.5410, -0.1420]).addTo(map)
+      .bindPopup('<a href="#" data-lightbox="lightbox1">Title 1</a>'); 
+
+    const title2 = L.marker([51.5418, -0.1430]).addTo(map)
+      .bindPopup('<a href="#" data-lightbox="lightbox2">Title 2</a>'); 
+
+    const title3 = L.marker([51.5405, -0.1415]).addTo(map)
+      .bindPopup('<a href="#" data-lightbox="lightbox3">Title 3</a>'); 
+
+    // Lightbox functionality 
+    const lightboxes = document.querySelectorAll('.camden-lightbox');
+    const closeButtons = document.querySelectorAll('.camden-lightbox-close');
+
+    map.on('popupopen', function(e) {
+      const popup = e.popup;
+      const trigger = popup.getElement().querySelector('a'); // Get the <a> tag inside the popup
+      trigger.addEventListener('click', (event) => {
+        event.preventDefault();
+        const lightboxId = trigger.dataset.lightbox;
+        const lightbox = document.getElementById(lightboxId);
+        lightbox.style.display = 'block';
+      });
+    });
+
+    closeButtons.forEach(button => {
+      button.addEventListener('click', () => {
+        const lightbox = button.closest('.camden-lightbox');
+        lightbox.style.display = 'none';
+      });
+    });
+  </script>
 </body>
 </html>
