--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -9,11 +9,12 @@
     /* CSS styles.css */
     #map { 
       height: 100vh; 
-      transform: rotate(90deg); /* Rotate the map 90 degrees */
+      transform: rotate(90deg); 
     }
 
-    .leaflet-control-attribution { 
-      display: none; /* Hide the attribution */
+    .leaflet-control-attribution,
+    .leaflet-control-zoom { 
+      display: none; /* Hide attribution and zoom controls */
     }
 
     .camden-title {
@@ -21,7 +22,7 @@
       /* Add any styling for your titles here */
     }
 
-    /* Lightbox Styles (You can customize these) */
+    /* Lightbox Styles */
     .camden-lightbox {
       display: none;
       position: fixed;
@@ -102,11 +103,25 @@
   <script>
     // JavaScript (script.js)
     const map = L.map('map', {
-      attributionControl: false // Disable attribution control
-    }).setView([51.5415, -0.1424], 16); // Centered on Camden Lock
+      attributionControl: false, // Disable attribution control
+      zoomControl: false,      // Disable zoom control
+      dragging: false,         // Disable dragging
+      scrollWheelZoom: false    // Disable zoom on scroll
+    }).setView([51.5415, -0.1424], 16); // Centered on Camden Lock (adjust as needed)
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    // Define the bounds (Oval Road Bridge to Kentish Town Bridge)
+    const southWest = L.latLng(51.5395, -0.1485); // Adjust coordinates as needed
+    const northEast = L.latLng(51.5445, -0.1365); // Adjust coordinates as needed
+    const bounds = L.latLngBounds(southWest, northEast);
+
+    // Set the map view to the defined bounds
+    map.fitBounds(bounds);
+
+    // Add a tile layer without labels
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+      subdomains: 'abcd',
+      maxZoom: 19
     }).addTo(map);
 
     // Add titles (replace with your actual coordinates and content)
@@ -125,7 +140,7 @@
 
     map.on('popupopen', function(e) {
       const popup = e.popup;
-      const trigger = popup.getElement().querySelector('a'); // Get the <a> tag inside the popup
+      const trigger = popup.getElement().querySelector('a'); 
       trigger.addEventListener('click', (event) => {
         event.preventDefault();
         const lightboxId = trigger.dataset.lightbox;
